[tool.poetry]
name = "common pyspark utils"
version = "0.1.0"
description = "Common pyspark utils"
authors = ["Corentin Vasseur <vasseur.corentin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
pandas = "^2.2.2"
pyspark = "^3.5.1"
typing-extensions = "^4.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.3"
mypy = "^1.9.0"
ruff = "^0.3.3"

[tool.poetry.group.documenters.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.3"
nbformat = "^5.10.2"

[tool.poetry.group.publishers.dependencies]
twine = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
